--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
             retries: 3
             timeout: 5s
     phpmyadmin:
+        depends_on:
+            - mysql
         image: phpmyadmin/phpmyadmin
         ports:
             - 8080:80
